# weeder_patched

./: .gitignore  Makefile.am  Makefile.in  NOTES  README.md  configure  configure.ac  ref_reversed.html  weederTFBS.c
FreqFiles/: AN.6.freq  AN.8.freq  BBS.6.freq  BBS.8.freq  BEC.6.freq  BEC.8.freq  CFI.6.freq  CFI.8.freq  CI.6.freq  CI.8.freq  DR.6.freq  DR.8.freq  FR.6.freq  FR.8.freq  HSI.6.freq  HSI.8.freq  MMI.6.freq  MMI.8.freq  XT.6.freq  XT.8.freq
doc/: README_LARGE_SEQUENCE_SETS.txt  organisms.txt
examples/: G1S.cycle.fasta  readme.txt
src/: weederTFBS.c  weeder_util.h  weederlauncher.c
